--- a/Harvard/index.html
+++ b/Harvard/index.html
@@ -101,7 +101,7 @@ html { overflow: visible; }
         newUrl = newUrl.replace('&sle=true', '');
         window.history.replaceState(null, '', newUrl);
         }
-        </script><script src="chrome-extension://jbkfoedolllekgbhcbcoahefnbanhhlh/content/fido2/page-script.js" id="bw-fido2-page-script"></script><script nonce="">_docs_flag_initialData={"docs-daflia":true,"docs-cclt":57,"docs-mwid":true,"docs-smheo":true,"info_params":{"token":"AC4w5Vjm82x5iebsjDd1IF-1TB9QsYApRw:1710501213222","includes_info_params":true},"docs-ecci":true,"ilcm":{"eui":"ADFN-cva5rbF3IqCzfE7T1MGaw0njnS7467foVBj-kc5hzJ0f3K6mYX5MkRCnrOOEEzxv5RXGLlE","je":1,"sstu":1710501213224551,"si":"COn8zsmR9oQDFVwXoAAdXIwCow","gsc":8,"ei":[5700019,5700057,5700103,5700333,5700422,5700559,5700579,5702135,5702936,5703259,5703839,5703938,5704621,5704883,5705301,5705777,5705891,5706007,5706069,5706169,5706270,5706786,5707047,5707204,5707711,5707820,5707947,5708480,5708576,5708886,5709085,5709357,5709476,5709661,5709673,5710692,5711471,5711550,5712146,5712635,5712909,5712913,5713195,5713554,5714310,5714326,5714465,5714674,5714839,5714843,5715364,5716149,5716457,5717157,5717949,5719527,5720568,5721814,5723679,5724215,5724435,5724533,5724896,5725934,5726695,5726752,5727257,5728201,5729092,5729206,5730225,5731835,5732339,5732391,5734392,5734632,5735134,5735252,5735670,5735806,5737153,5737254,5737800,5738081,5738215,5739778,5739837,5740186,5740341,5740731,5740814,5742056,5743452,5743787,5744348,5744595,5746311,5746724,5747216,5747351,5747881,5749276,5749715,5749835,5750254,5750313,5750371,5750750,5750900,5750978,5753681,5754269,5754918,5756417,5756457,5756655,5757382,5758497,5758616,5758674,5759278,5760167,5760307,5760450,5760470,5760760,5762381,5763557,5763577,5765491,5768017,5768325,5769791,5769871,5769915,5770170,5771370,5771535,5773794,5776215,5778980,5780532,5781480,5781789,5782030,5782181,5782224,5782635,5782984,5783713,5783897,5784602,5785577,5786403,5786678,5786966,5787294,5790897,5792836,5793785,5794164,5794509,5794656,5794696,5794717,5794913,5795357,5795929,5796864,5797412,5797453,5797699,5797719,5798732,5799994,13702623,48966202,49372328,49375222,49381162,49398749,49421452,49451639,49452965,49471971,49491685,49499289,49501724,49512213,49518590,49629262,49642865,49643596,49644123,49658602,49769325,49783962,49822909,49823112,49824143,49833550,49842983,49878668,49904347,49924754,49926201,49927387,49943127,49971941,49976048,49976863,49979824,50082768,50166919,50179510,50209525,50221888,50266150,50273416,50335675,50335857,50360128,50360924,50387063,50389258,50390045,50439168,50492390,50498755,50515215,50520300,50529291,50533204,50549583,50549979,50562903,50580212,50602289,50606435,70971284,70979490,70982439,71008121,71035368,71035445,71036581,71038323,71061488,71079072,71079886,71085309,71123552,71145456,71152218,71178780,71185118,71197954,71239114,71254182,71260410,71274245,71289134,71296556,71330481,71347020,71357861,71386873,71387423,71387877,71391596,71394887,71400634,71407433,71416980,71470324,71472042,71484155,71505363,71510857,71520558,71530131,71531265,71531857,71544822,71554380,71573978,71574785,71581648,71582476,71582804,71583158,71594881,71600985,71608368,71614766,71625728,71626751,71626772,71626804,71626825,71626898,71626939,71626949,71627009,71627029,71627049,71627149,71631283,71631566,71631653,71632394,71652641,71658068,71659901,71660166,71661068,71668061,71668390,71669198,71671686,71679508,71689928,71700636,71710028,71722650,71724156,71732226,71733823,71794383,71821506,71822072,71833012,71864221,71878375,71881399,71891547,71898015,71902351,71924159,71958949,71960488,94333368,94339749,94353296,94354972,94386255,94391523,94415333,94427808,94429074,94434503,94442381,94445007,94454749,94467929,94492897,94493278,94519134,94556011,94556050,94585967,94618321],"crc":0,"cvi":[]},"drive_url":"//drive.google.com/u/7?usp\u003dsheets_web","docs-liap":"/naLogImpressions","docs-sup":"/spreadsheets/u/7"}; _docs_flag_cek='zQQzMqmY4neBgaiWHaydfw\x3d\x3d'; if (window['DOCS_timing']) {DOCS_timing['ifdld']=new Date().getTime();}</script><script nonce="">document.addEventListener('DOMContentLoaded', init);</script><input data-inspect-config="3" id="_w_simile" type="hidden" /><script type="text/javascript" src="chrome-extension://dbjbempljhcmhlfpfacalomonjpalpko/scripts/inspector.js"></script>
+        </script><script nonce="">_docs_flag_initialData={"docs-daflia":true,"docs-cclt":57,"docs-mwid":true,"docs-smheo":true,"info_params":{"token":"AC4w5VhIG6Lmqx-5k6ZuTIDxyqWG29HwhQ:1710501682589","includes_info_params":true},"docs-ecci":true,"ilcm":{"eui":"ADFN-ctZ1maPh45jB-oj79wcMIIJfCM6ZeZ9tZ1AbMNd_smFTdFPW1dMgz5jOCB_KjfXpHMnLwrS","je":1,"sstu":1710501682594594,"si":"CKOGt6mT9oQDFVwXoAAdXIwCow","gsc":8,"ei":[5700019,5700057,5700103,5700333,5700422,5700559,5700579,5702135,5702936,5703259,5703839,5703938,5704621,5704883,5705301,5705777,5705891,5706007,5706069,5706169,5706270,5706786,5707047,5707204,5707407,5707711,5707820,5707947,5708480,5708576,5708886,5709085,5709357,5709476,5709661,5709673,5710692,5711471,5711550,5712146,5712635,5712909,5712913,5713195,5713554,5714310,5714326,5714465,5714674,5714839,5714843,5715364,5716149,5716457,5717157,5717949,5719527,5720568,5721814,5723679,5724215,5724435,5724533,5724896,5725934,5726695,5726752,5727257,5728201,5729092,5729206,5730225,5731835,5732339,5732391,5734392,5734632,5735134,5735252,5735670,5735806,5737153,5737254,5737800,5738081,5738215,5739778,5739837,5740186,5740341,5740731,5740814,5742056,5743452,5743787,5744348,5744595,5746311,5746724,5747216,5747351,5747881,5749276,5749715,5749835,5750254,5750313,5750371,5750750,5750900,5750978,5753681,5754269,5754918,5756417,5756457,5756655,5757382,5758497,5758616,5758674,5759278,5760167,5760307,5760450,5760470,5760760,5762381,5763557,5763577,5765491,5768017,5768325,5769791,5769871,5769915,5770170,5771370,5771535,5773794,5776215,5778980,5780532,5781480,5781789,5782030,5782181,5782224,5782635,5782984,5783713,5783897,5784602,5785577,5786403,5786678,5786966,5787294,5790897,5792836,5793785,5794164,5794509,5794656,5794696,5794717,5794913,5795357,5795929,5796864,5797412,5797453,5797699,5797719,5798732,5799994,13702623,48966202,49372328,49375222,49381162,49398749,49421452,49451639,49452965,49471971,49491685,49499289,49501724,49512213,49518590,49629262,49642865,49643596,49644123,49658602,49769325,49783962,49822909,49823112,49824143,49833550,49842983,49878668,49904347,49924754,49926201,49927387,49943127,49971941,49976048,49976863,49979824,50082768,50166919,50179510,50209525,50221888,50266150,50273416,50335675,50335857,50360128,50360924,50387063,50389258,50390045,50439168,50492390,50498755,50515215,50520300,50529291,50533204,50549583,50549979,50562903,50580212,50602289,50606435,70971284,70979490,70982439,71008121,71035368,71035445,71036581,71038323,71061488,71079072,71079886,71085309,71123552,71145456,71152218,71178780,71185118,71197954,71239114,71254182,71260410,71274245,71289134,71296556,71330481,71347020,71357861,71386873,71387423,71387877,71391596,71394887,71400634,71407433,71416980,71470324,71472042,71484155,71505363,71510857,71520558,71530131,71531265,71531857,71544822,71554380,71573978,71581648,71582476,71582804,71583158,71594881,71600985,71608368,71614493,71614766,71625728,71626751,71626772,71626804,71626825,71626898,71626939,71626949,71627009,71627029,71627049,71627149,71631283,71631566,71631653,71632394,71652641,71658068,71659901,71660166,71661068,71668061,71668390,71669198,71671686,71679508,71689928,71700636,71710028,71722650,71724156,71732226,71733823,71794383,71821506,71822072,71833012,71864221,71878375,71881399,71891547,71898015,71902351,71924159,71958949,71960488,94333368,94339749,94353296,94354972,94386255,94391523,94415333,94427808,94429074,94434503,94442381,94445007,94454749,94467929,94492897,94493278,94519134,94556011,94556050,94585967,94618321],"crc":0,"cvi":[]},"drive_url":"//drive.google.com/u/7?usp\u003dsheets_web","docs-liap":"/naLogImpressions","docs-sup":"/spreadsheets/u/7"}; _docs_flag_cek='zQQzMqmY4neBgaiWHaydfw\x3d\x3d'; if (window['DOCS_timing']) {DOCS_timing['ifdld']=new Date().getTime();}</script><script nonce="">document.addEventListener('DOMContentLoaded', init);</script><script src="chrome-extension://jbkfoedolllekgbhcbcoahefnbanhhlh/content/fido2/page-script.js" id="bw-fido2-page-script"></script><input data-inspect-config="3" id="_w_simile" type="hidden" /><script type="text/javascript" src="chrome-extension://dbjbempljhcmhlfpfacalomonjpalpko/scripts/inspector.js"></script>
 	<style class="automa-element-selector" type="text/css">
 @font-face { font-family: "Inter var"; font-weight: 100 900; font-display: swap; font-style: normal; font-named-instance: "Regular"; src: url("chrome-extension://infppggnoaenmfagbfknfkancpbljcca/Inter-roman-latin.var.woff2") format("woff2") }
 .automa-element-selector { direction: ltr } 
@@ -140,7 +140,7 @@ html { overflow: visible; }
 							&nbsp;</td>
 						<td class="s5" colspan="2" rowspan="3">
 							<div style="width:157px;height:74px;">
-								<img src="https://lh7-us.googleusercontent.com/u/7/sheets/APBGjhYhOpsuKYdetMAg4zknPqSuxvmKzlqtH8W52qKWVV9Yi_0rTG1yTq6XYej0SSsKLSzS29CPdLfNGJyj0PvoXnabKIza9WMjadcTXiptMC0dZYxURsbps2U8Km4azqRXnLt2gHFhSWx1dRGFduXqwCQI9dsFauHyEEU4XPw8C3UsKsQOW4MUsbOiXeGNrVWOJr0djGAiNnMcfgz4zmY1skbrYdS8tH2ehtpE-XgybFAtMadzLlKOqZI6WvrmEQeidVbjHxfLuMLcnM_gGRU34u9c_KfQ2e3Xhf3Xoli2PE5ddgImzIcQg7PTn4L3nqeCYIov-uU92tS8oOcfOccUIzHyclCW6h09rwTd1FtL-XobidQTSclzVhO3qRU-LNT0ZRXTMKF8PuF6RDPz3n19tsC63Pjw5_vi7SyOq3NnYEDR654EuOua6QnwPvj2SptRyA_04r9sdVoQThr5w1_HhHhniop9W7xcyZCuTbwmv3sFefz9staAJN3S51Ez-zP3P6UkdA8s3b7S1ngqd6XaoCk6XJ5_S4Zz6Sy7XZXWo5ORwvf0NkH3E9O8HpZKsAFne58nbvO27BE-O8hJGG-ph3WulEusGSzOr-GML-KW_GHRQXQcXRH9nRSaYskL5BZCIXciDU_Aby5C7_HbZBuWhk7WcDc_wE-Qpkt1Mplkwm8a71rGCsSBsDgafK-QzAYvKlTqdWxNXWYrAiKOfzEd5KQQ6d8c4xk4W8yjYb1VjhyJuq5VNTDETf_F71TKbLl1uF3ym5TCSFgljgji0dfqAtr7wg3VwTLPij0TLow9aNUKYj8dX5j2KK6_pbTpgFT7bmTq0weOYDafBC-RIpQavTQLxNYyDqWVidCBtqvSPN8IZfLvGmI7v-jqm3Xq54KEYrZghTvYhvy_Wp4sPoqxLOKTRCxQ_THcEd9UWGA27tJErMqpqbq4GBxULmHBCyNPKOoiBz7t78OG5F4l_9x_2LlqNDY0xwalmjJL-m7ynU0ROwMBtyqmnurFuaBet4RhFsGR0y6LQc3fRlPMnk_9Hvx9rTMFPhycWD3YJCzZfJ-gTroDe37cM4_CohVqSbDC4LvuSaW3waUAWC98Koi0KsZO8gkJgxN24SLYhnP3uDNZ1VlfXj02uB4N2omgNtLrt8fqbn8hI2cpmvBSFlvbjy0=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
+								<img src="https://lh7-us.googleusercontent.com/u/7/sheets/APBGjhYIYtBGkI2jcrAeDZoOsdkOgDakOkSYyFgQRg6rWX0Ur5-2p7y5B7fcsGdQvk60Ns8xlJl5wRthwu1lbiP6dZAXVCn6Ys16iosUu9ar6LMczu6MYZmdtKj8b3Tkx2Wf-nOmHGPNXWXNfZn1Ett4REomMN5udufu8cvggwSmWYtOr0wdigOZKHzTZ1_QwYDUPFiaiY796aEBnGDAUM9r12P4TWeQluvI9fRogOHuo38h7KfQkhxGH5Yy5rpwmamjyqL8H2LkrhSwEzK0Gp90FSpfZ-tYjXAWM90ABagTRazpahEBOKFUjynx1nuNRqxysw4nUXx4gm3jsSfB3OyBc1O9Enz-HKAeTqdaLHyUD5Z6gFvcHUr13spxlJO6yugj1m7u5I6bWvn9ZJNgTWJiUWhPsspbscLCf0nfRSjI5jkfw3PpwqovEatvz1g3UAcQKEEA4_aO2PPtoL1biVu7U04g8KakviLRtERhSybAJMHSYSXi14qIh__6fCBfv6kXrnj2OtbUhWK8EWqQXUfseZGRh7YOnt1Mi7VpM6u4Uxw-pBwP-kaZ2cePLpkMf6sPelshllFz2-4vdqpOYdVvf2n-TWvEvvO9OmXxyiu7wdzisoGjfJzBb5T_FaDT3f_tYx8naPvUIKQnXlob1-e5CrY6LsYJZ36-vvtrceIEKCJxJ35Od5jd_Yv12JsInnJWWyGeX2dkxYIGQCxhCrnzR9gHvYST9FPjP1K7ZwbOHknBPMNEYQrL6vcaPfkjH-NwdhfW8D8G8B6F17MvPabYJvDta6S9BtOH7L9EK40Ul5y7akbiG49j8kZykiE6YB9-0IZbzrEdwsBiHDdE3rwZix0O3ux1qFILrfEPYvyDYjQTt_42lkI--CFJCFZJmAgdybYtn4HH1x7PaXog-0l9noJwiwudPHl8dnAtHrIdcii_iwnkFZ9p_Q76q6xuwKdJZD8sDbbikhlS6N1zDFpmqh0-IEiufZf_Gn1ik7Yo169AFn1WXFGlUHTWWMk-sqXVGrApQTD0Ut31bFcis_3cjcnVE9VzEZa4_OHwt4CW7SJTNwHFaCF_YBLwL-sYJw85-bCSg8IcpJRCBA1OpP9Eh_W4J0xRA1Jlbwe_o0qYZ2tf7aZHprA7xS14LBthGM0M0CF8KhZkecoLyexL9KXSnaaa=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
 						</td>
 						<td class="s6" colspan="3" dir="ltr" rowspan="4">
 							高雄大學城哈佛大樓修繕追蹤<br />
@@ -148,7 +148,7 @@ html { overflow: visible; }
 						<td class="s7" dir="ltr">
 							報修案件</td>
 						<td class="s7">
-							31</td>
+							32</td>
 						<td class="s3">
 							&nbsp;</td>
 					</tr>
@@ -168,7 +168,7 @@ html { overflow: visible; }
 						<td class="s7" dir="ltr">
 							完成比例</td>
 						<td class="s7">
-							71.0%</td>
+							68.8%</td>
 						<td class="s3">
 							&nbsp;</td>
 					</tr>
@@ -582,7 +582,7 @@ html { overflow: visible; }
 						<td class="s9" dir="ltr">
 							公設</td>
 						<td class="s14" dir="ltr">
-							大廳天花板1支燈管不亮</td>
+							大廳天花板1支燈管不亮。</td>
 						<td class="s14" dir="ltr">
 							1️⃣01/19廠商保養時通知。（需使用高梯維修）</td>
 						<td class="s9">
@@ -664,7 +664,7 @@ html { overflow: visible; }
 						<td class="s13" dir="ltr">
 							B棟14樓對講機故障。</td>
 						<td class="s13" dir="ltr">
-							🆗01/30廠商維修更換電源供應器。</td>
+							🆗01/30合約廠商宗亞維修更換電源供應器。</td>
 						<td class="s12" dir="ltr">
 							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#checked-checkbox-id"></use></svg></td>
 						<td class="s12" dir="ltr">
@@ -686,7 +686,7 @@ html { overflow: visible; }
 						<td class="s13" dir="ltr">
 							1️⃣02/01清點故障不亮燈具數量，於過年後購入更換。<br />
 							2️⃣02/22購入25顆。<br />
-							🆗03/04消防機電廠商維修更換。</td>
+							🆗03/04消防機電合約廠商國霖維修更換。</td>
 						<td class="s12" dir="ltr">
 							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#checked-checkbox-id"></use></svg></td>
 						<td class="s12" dir="ltr">
@@ -726,7 +726,7 @@ html { overflow: visible; }
 						<td class="s13" dir="ltr">
 							B棟5樓對講機故障。</td>
 						<td class="s13" dir="ltr">
-							🆗01/30廠商維修更換電源供應器。</td>
+							🆗01/30合約廠商宗亞維修更換電源供應器。</td>
 						<td class="s12" dir="ltr">
 							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#checked-checkbox-id"></use></svg></td>
 						<td class="s12" dir="ltr">
@@ -786,7 +786,7 @@ html { overflow: visible; }
 						<td class="s14" dir="ltr">
 							B2/89車位旁過濾淨水器漏水。</td>
 						<td class="s14" dir="ltr">
-							1️⃣03/11報修廠商。</td>
+							1️⃣03/11報修廠商水淨科技。</td>
 						<td class="s9">
 							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#unchecked-checkbox-id"></use></svg></td>
 						<td class="s9">
@@ -809,7 +809,7 @@ html { overflow: visible; }
 							維修編號：03131503。<br />
 							維修編號：03131504。</td>
 						<td class="s13" dir="ltr">
-							1️⃣03/13報修廠商。<br />
+							1️⃣03/13報修合約廠商國霖。<br />
 							🆗03/14廠商維修更換電源供應器。</td>
 						<td class="s12" dir="ltr">
 							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#checked-checkbox-id"></use></svg></td>
@@ -832,7 +832,7 @@ html { overflow: visible; }
 							2.受信總機開關面板更新。（5,500）<br />
 							3.受信總機預備電池更新。（1,800）</td>
 						<td class="s14" dir="ltr">
-							1️⃣03/13消防廠商國霖報價總額：10,650（含稅），經議價同意10,000修繕。</td>
+							1️⃣03/15合約廠商國霖報價總額：10,650（含稅），經議價同意10,000修繕。</td>
 						<td class="s9">
 							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#unchecked-checkbox-id"></use></svg></td>
 						<td class="s9">
@@ -845,14 +845,14 @@ html { overflow: visible; }
 							&nbsp;</td>
 						<td class="s9" dir="ltr">
 							32</td>
-						<td class="s9">
-							&nbsp;</td>
-						<td class="s9">
-							&nbsp;</td>
-						<td class="s14">
-							&nbsp;</td>
-						<td class="s14">
-							&nbsp;</td>
+						<td class="s9" dir="ltr">
+							2024/03/15</td>
+						<td class="s9" dir="ltr">
+							公設</td>
+						<td class="s14" dir="ltr">
+							水景馬達漏水。</td>
+						<td class="s14" dir="ltr">
+							1️⃣03/15報修合約廠商水立方。</td>
 						<td class="s9">
 							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#unchecked-checkbox-id"></use></svg></td>
 						<td class="s9">
