--- a/Harvard/Page04.html
+++ b/Harvard/Page04.html
@@ -233,11 +233,11 @@ html { overflow: visible; }
 						<td class="s9" dir="ltr">
 							4</td>
 						<td class="s9" colspan="2" dir="ltr">
-							&nbsp;</td>
+							廚下異味</td>
 						<td class="s11" dir="ltr">
-							&nbsp;</td>
-						<td class="s9" dir="ltr">
-							&nbsp;</td>
+							嘗試廚下的存水灣管拆下來清洗。</td>
+						<td class="s12" dir="ltr">
+							<a href="https://www.google.com/url?q=https://drive.google.com/file/d/1d-c4dUMaeFYAmulwRKg2BRCrdc4hI-00/view?usp%3Ddrive_link&amp;sa=D&amp;source=editors&amp;ust=1710666636018586&amp;usg=AOvVaw2_24d-SjxiC6oJ-yCLvLo2" rel="noreferrer" target="_blank">圖片解說</a></td>
 						<td class="s2">
 							&nbsp;</td>
 					</tr>
