--- a/Harvard/Page02.html
+++ b/Harvard/Page02.html
@@ -1,8 +1,9 @@
+
 	<meta content="target-densitydpi=device-dpi,user-scalable=1,minimum-scale=0.1,maximum-scale=2.5,width=device-width" name="viewport" />
 
 	<title>車位租賃</title>
 
-	<link href="/static/spreadsheets2/client/css/194951828-waffle_k_ltr.css" nonce="" rel="stylesheet" type="text/css" />
+	<link href="/static/spreadsheets2/client/css/1305304861-waffle_k_ltr.css" nonce="" rel="stylesheet" type="text/css" />
 	<style nonce="" type="text/css">
 html { overflow: visible; }
         #sheets-viewport { overflow: auto; }
@@ -101,7 +102,7 @@ html { overflow: visible; }
         newUrl = newUrl.replace('&sle=true', '');
         window.history.replaceState(null, '', newUrl);
         }
-        </script><script nonce="">_docs_flag_initialData={"docs-daflia":true,"docs-cclt":57,"docs-mwid":true,"docs-smheo":true,"info_params":{"token":"AC4w5ViB-kGyXd655cqdPmsG_axKkhnlnA:1710512391336","includes_info_params":true},"docs-ecci":true,"ilcm":{"eui":"ADFN-ctPZggyFMRT-JK7Jb8POEpdc2H1MzyXYpdxczX2Zo1LZDcP6GceeAndTlFEF8iLmYNZbDYb","je":1,"sstu":1710512391342281,"si":"CMuR4Zu79oQDFS0gGQAdgaMC-A","gsc":8,"ei":[5700019,5700057,5700103,5700333,5700422,5700559,5700579,5702135,5702936,5703259,5703839,5703938,5704621,5704883,5705301,5705777,5705891,5706007,5706069,5706169,5706270,5706786,5707047,5707204,5707711,5707820,5707947,5708480,5708576,5708886,5709085,5709357,5709476,5709661,5709673,5710692,5711471,5711550,5712146,5712635,5712909,5712913,5713195,5713554,5714310,5714326,5714465,5714674,5714839,5714843,5715364,5716149,5716457,5717157,5717949,5719527,5720568,5721814,5723679,5724215,5724435,5724533,5724896,5725934,5726695,5726752,5727257,5728201,5729092,5729206,5730225,5731835,5732339,5732391,5734392,5734632,5735134,5735252,5735670,5735806,5737153,5737254,5737800,5738081,5738215,5739778,5739837,5740186,5740341,5740731,5740814,5742056,5743452,5743787,5744348,5744595,5746311,5746724,5747216,5747351,5747881,5749276,5749715,5749835,5750254,5750313,5750371,5750750,5750900,5750978,5753681,5754269,5754919,5756417,5756457,5756655,5757382,5758497,5758616,5758674,5759278,5760167,5760307,5760450,5760470,5760760,5762381,5763557,5763577,5765491,5768017,5768325,5769791,5769871,5769915,5770170,5771370,5771535,5773794,5776215,5778980,5780532,5781480,5781789,5782030,5782181,5782224,5782635,5782984,5783713,5783897,5784602,5785577,5786403,5786678,5786966,5787294,5790897,5792836,5793785,5794164,5794509,5794656,5794696,5794717,5794913,5795357,5795929,5796864,5797412,5797453,5797699,5797719,5798732,5799994,13702623,48966202,49372328,49375222,49381162,49398749,49421452,49451639,49452965,49471971,49491685,49499289,49501724,49512213,49518590,49629262,49642865,49643596,49644123,49658602,49769325,49783962,49822909,49823112,49824143,49833550,49842983,49878668,49904347,49924754,49926201,49927387,49943127,49971941,49976048,49976863,49979824,50082768,50166919,50179510,50209525,50221888,50266150,50273416,50335675,50335857,50360128,50360924,50387063,50389258,50390045,50439168,50492390,50498755,50515215,50520300,50529291,50533204,50549583,50549979,50562903,50580212,50602289,50606435,70971284,70979490,70982439,71008121,71035368,71035445,71036581,71038323,71061488,71079072,71079886,71085309,71123552,71145456,71152218,71178780,71185118,71197954,71239114,71254182,71260410,71274245,71289134,71296556,71330481,71347020,71357861,71386873,71387423,71387877,71391596,71394887,71400634,71407433,71416980,71470324,71472042,71484155,71505363,71510857,71520558,71530131,71531265,71531857,71544822,71554380,71573978,71574786,71581648,71582476,71582804,71583158,71594881,71600985,71608368,71614503,71614766,71625728,71626751,71626772,71626804,71626825,71626898,71626939,71626949,71627009,71627029,71627049,71627149,71631283,71631566,71631653,71632394,71652641,71658068,71659901,71660166,71661068,71668061,71668390,71669198,71671686,71679508,71689928,71700636,71710028,71722650,71724156,71732226,71733823,71794383,71821506,71822072,71833012,71864221,71878375,71881399,71891547,71898015,71902351,71924159,71958949,71960488,94333368,94339749,94353296,94354972,94386255,94391523,94415333,94427808,94429074,94434503,94442381,94445007,94454749,94467929,94492897,94493278,94519134,94556011,94556050,94585967,94618321],"crc":0,"cvi":[]},"drive_url":"//drive.google.com/u/7?usp\u003dsheets_web","docs-liap":"/naLogImpressions","docs-sup":"/spreadsheets/u/7"}; _docs_flag_cek='zQQzMqmY4neBgaiWHaydfw\x3d\x3d'; if (window['DOCS_timing']) {DOCS_timing['ifdld']=new Date().getTime();}</script><script nonce="">document.addEventListener('DOMContentLoaded', init);</script><script src="chrome-extension://jbkfoedolllekgbhcbcoahefnbanhhlh/content/fido2/page-script.js" id="bw-fido2-page-script"></script><input data-inspect-config="3" id="_w_simile" type="hidden" /><script type="text/javascript" src="chrome-extension://dbjbempljhcmhlfpfacalomonjpalpko/scripts/inspector.js"></script>
+        </script><script nonce="">_docs_flag_initialData={"docs-daflia":true,"docs-cclt":57,"docs-mwid":true,"docs-smheo":true,"info_params":{"token":"AC4w5VgHuCe6H8ASQN9aEGKSZIEOk7wzuQ:1711333384575","includes_info_params":true},"docs-ecci":true,"ilcm":{"eui":"ADFN-cu4COip_YiMr-rD2VmjVW7fxRT6QvtE9EYE6pPKMapOfh8bkX1_DpubF48ciyvbD0SuEJi2","je":1,"sstu":1711333384582302,"si":"CKHp69OtjoUDFcArqQEdWaYEEA","gsc":1,"ei":[5700019,5700057,5700103,5700333,5700422,5700559,5700579,5702135,5702936,5703259,5703839,5703938,5704621,5704883,5705301,5705777,5705891,5706007,5706069,5706169,5706270,5706786,5707047,5707204,5707711,5707820,5707947,5708480,5708576,5708886,5709085,5709357,5709476,5709661,5709673,5710692,5711471,5711550,5712146,5712635,5712909,5712913,5713195,5713554,5714310,5714326,5714465,5714674,5714839,5714843,5715364,5716149,5716457,5717157,5717949,5719527,5720568,5721814,5723679,5724215,5724435,5724533,5724896,5725934,5726695,5726752,5727257,5728201,5729092,5729206,5730225,5731835,5732339,5732391,5734392,5734632,5735134,5735252,5735670,5735806,5737153,5737254,5737800,5738081,5738215,5739778,5739837,5740186,5740341,5740731,5740814,5742056,5743452,5743787,5744595,5746311,5746724,5747216,5747351,5747881,5749276,5749715,5749835,5750254,5750313,5750371,5750750,5750900,5750978,5753681,5754269,5754918,5756417,5756457,5756655,5757382,5758497,5758616,5758674,5759278,5760167,5760307,5760450,5760470,5760760,5762381,5763557,5763577,5765491,5768017,5768325,5769791,5769871,5769915,5770170,5771370,5771535,5773794,5776215,5778216,5780532,5781480,5781789,5782030,5782181,5782224,5782635,5782984,5783713,5783897,5784602,5785577,5786403,5786678,5786966,5787293,5789412,5790897,5792836,5793785,5794164,5794509,5794656,5794696,5794717,5794913,5795357,5795929,5796864,5797412,5797453,5797699,5797719,5798732,5799994,13702623,48966202,49372328,49375222,49381162,49398749,49421452,49451639,49452965,49471971,49491685,49499289,49501724,49512213,49518590,49629262,49642865,49643596,49644123,49658602,49769325,49783962,49822909,49823112,49824143,49833550,49842983,49878668,49904347,49924754,49926201,49927387,49943127,49971941,49976048,49976863,49979824,50082768,50166919,50179510,50209525,50221888,50266150,50273416,50335675,50335857,50360128,50360924,50387063,50389258,50390045,50439168,50492390,50498755,50515215,50520300,50529291,50549583,50549979,50562903,50580212,50602289,50606435,70971284,70979490,70982439,71008121,71035368,71035445,71036581,71038323,71061488,71079072,71079886,71085309,71123552,71145456,71152218,71178780,71185118,71197954,71239114,71254182,71260410,71274245,71289134,71296556,71330481,71347020,71357861,71386873,71387423,71387877,71391596,71394887,71400634,71407433,71451250,71470324,71472042,71484155,71505363,71510857,71520558,71530131,71531265,71531857,71544822,71554380,71573978,71581648,71582476,71582804,71583158,71594881,71600985,71608368,71614493,71614766,71625728,71626751,71626772,71626804,71626825,71626898,71626939,71626949,71626979,71627009,71627029,71627049,71631283,71631653,71632394,71652641,71658068,71659901,71660166,71661068,71668061,71668390,71669198,71671686,71679508,71689928,71700636,71710028,71722650,71724157,71732226,71733823,71794383,71821506,71822072,71833012,71864221,71878375,71881399,71891547,71898015,71902351,71924159,71958949,71959964,71960488,94333368,94339749,94353296,94354972,94386255,94391523,94415333,94427808,94429074,94434503,94442381,94445007,94454749,94467929,94479605,94492791,94492897,94493278,94519134,94554776,94585967,94618321],"crc":0,"cvi":[]},"drive_url":"//drive.google.com/u/0?usp\u003dsheets_web","docs-liap":"/naLogImpressions","docs-sup":"/spreadsheets/u/0"}; _docs_flag_cek='zQQzMqmY4neBgaiWHaydfw\x3d\x3d'; if (window['DOCS_timing']) {DOCS_timing['ifdld']=new Date().getTime();}</script><script nonce="">document.addEventListener('DOMContentLoaded', init);</script>
 	<style class="automa-element-selector" type="text/css">
 @font-face { font-family: "Inter var"; font-weight: 100 900; font-display: swap; font-style: normal; font-named-instance: "Regular"; src: url("chrome-extension://infppggnoaenmfagbfknfkancpbljcca/Inter-roman-latin.var.woff2") format("woff2") }
 .automa-element-selector { direction: ltr } 
@@ -140,7 +141,7 @@ html { overflow: visible; }
 							&nbsp;</td>
 						<td class="s5" colspan="2" rowspan="3">
 							<div style="width:157px;height:74px;">
-								<img src="https://lh7-us.googleusercontent.com/u/7/sheets/APBGjhZw9FFRDt0lzDXHfZnVyhS4BrKMrtkBeAKZ5EuNdpz8bdMh6OP44lTl-4W-ON7_rhKApYrq96SVklI1CgZK-adi_hochH7UZQK3JawdmfWz1tqId4J_KSXzzn8ITuP6RtbqXXNXEvjs_d-0p-PH1dw5N1K6UQ7uO4CxXMajn3-yrteVrswL7KnWE-yUpEzhsxDKJBjRg3jAtk4iSm1RMBvOUtLJYbdvusbo0lxETzf9P5q3uMNutSHhs-8T2wCHcPlyfkVPBS4xMxs4qULSb1FDd-xo0cniWYJU2J4iA7xd2bnEpeeMpUzQef6aJGi8ySShCZCa-5PdYDSx1w4JiV7_jiHwB-xEOr7UlUiLOmrqxWAPtMWVWfxqc3Z1_pp5DTQNDiuDi14rq8ovLq-FnCKVTOWflz1Ah2L0GvEREOj9HWnCaUZcAfECeAPyXxGtuvbb9sRYe-Ad60KfMLkwcoo46eGUgi-Z6wPpSZJt4eoMWtOKdQwFnLlTItvvyXi4j_ktcubWjnMIOdmzeEH3hOYGWrpGGAZy3f4AFr19QwZJLbRP_F0G01RcY_dM4P-HKFie2l95qKi66OGzhbGRyNnCQZYQrPN3zNyAMQVhf94EenZ5bnZKWrrqhLkztM8SdQeVb3RqtCrNOryqwzpV6_GaVQBvKKIRwhIipXpbXflWijDK3z15AsJgPA_HxDtLnj_D9YY3WJOsNGRWYRlAD92ZoSaQOolcnnCUgFFRYsWBuXeTLrj_m9GH7rcIdYEgvHHqadYapQCvX631oxbce7MPPkPigPdnZ3Fe6yNc9yrAhN_fMiDnw1GC91hu1CcuFn5f_7UrUhtvqHSCMSL9KuhIYmjJ1mJoEkyGYPV2VvlOef9Qz9E77Qr73r_m1-cw3vllC2Rp3lGHXGqZBkP0uQXqDskzNFV5KAiI8F0i67xR8Mpv5ssQHndpMzr8Z1gTiXFgPeO_uU14P4F2_XVb7xrqO7o0xFFPm_MKZD_XsXPGY_HqEiD2V_JJp9aP8VGi4QLT8hn7jokzv6usGda4LDnhfMlEbnNLQwgSY5eFGlc949QMybSZs3Hi0moLp1O47lQCxsAl5an-5EX542UE8k1Dfyb4dq3t87rpIe-OGc4d5Ywl6o_Fe3OaYJ1ZbJepLG65mmqr44ilwk6mPGpzhMzE=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
+								<img src="https://lh7-us.googleusercontent.com/u/0/sheets/APBGjhbFqWHMAnFskIB2Kws2behnKwVIcfKnBYAIwyEdL5l5MgJR1U5p8I8V6dyygHwqCfsdCnLCkmMSaT2W0TEGE7jJs9_MhQprP89QWzVQs5BfW83-t9XbCOKlRirRK0XnpSApkjEPVAbSNyyYu2ODL0cEfoDGQGS6Sj-aGClFnmlCYR3kveZ13RRr14FmJSewJKLJ-5V1Gq1nNNg5NFMdz-RqZJjpTftIorEOA7auXP6vf3J31a-Q-ANgjQjwPgVirse94TCFZH4A4USCQP8zA72ZfRedUYQVS5Px3lH7ukNDHGnZk3pIcBBhPSCBMgD1nh0ymsz7DIPi86jTVoDOKzIE3h1QhZ4ZM6FYyYshXIwB1mcd4-DP4nUJylHbG3xJcPEepOonFupBkG9GNusQgB1-8G6b5nqV3wVnidKzaXNvbzpoLGmwDlA6LyEFl-mOCfXNLpoK_Pl0s6k_MWrW8LB7WTAa2Tu6olR6mdQDY_ZqjRReGygfqRif1Fvhh_pVCP8WGmC-0ohga3BgrC8QZ1nARBc-PXdr-RPO6B3B3DTEpAgAIz0CKDQv7ObekoIOkTAMNT34A3twW6YZuTvDHrSl6aQA0DG5iI0mt-HOC08kTjrFu3tpgQzjz8aQDBze2_t7SoW43ilZhncvDCeXTAiRYJdjPZkSyk7xkk2LqNcM26nY8aY23gGtn8FgTi_-YPPYfRVLRtMYh3rPGC2VuBsynNixofc-YmHuUia2eq8FT9P_ClPfoXkTWomY8TV7gsmJ1JgHd4V5r_B4tSfD0vl6iJXje4CDDwecKMgW_m6PKSre1VNCZJ_R9WyLd5N-1R9oIuncqPzhYZhEtoCXNXvi7Tmjmn9bzX3oK2fZ1VhmO85ev1LiR8ameuKWGFSP6uNavrAUg7eKQkspVesJlh1OsjnyyX3YUYJduVPDDB-NjH2ZBI2_P4qaUwm1k8hAgmqk=w157-h74" style="width:inherit;height:inherit;object-fit:scale-down;object-position:center bottom;" /></div>
 						</td>
 						<td class="s6" colspan="3" dir="ltr" rowspan="4">
 							高雄大學城哈佛大樓車位租賃<br />
@@ -148,7 +149,7 @@ html { overflow: visible; }
 						<td class="s7" dir="ltr">
 							出租案件</td>
 						<td class="s7">
-							1</td>
+							2</td>
 						<td class="s3">
 							&nbsp;</td>
 					</tr>
@@ -168,7 +169,7 @@ html { overflow: visible; }
 						<td class="s7" dir="ltr">
 							完成比例</td>
 						<td class="s7">
-							33.3%</td>
+							25.0%</td>
 						<td class="s3">
 							&nbsp;</td>
 					</tr>
@@ -178,7 +179,7 @@ html { overflow: visible; }
 						<td class="s7" colspan="2" dir="ltr">
 							&nbsp;</td>
 						<td class="s7" colspan="2" dir="ltr">
-							📅 2024/02/18 10:00</td>
+							📅 2024/03/25 10:00</td>
 						<td class="s3">
 							&nbsp;</td>
 					</tr>
@@ -268,13 +269,13 @@ html { overflow: visible; }
 						<td class="s9" dir="ltr">
 							4</td>
 						<td class="s9" dir="ltr">
-							&nbsp;</td>
+							2024/03/25</td>
 						<td class="s9" dir="ltr">
-							<span class="s13" style="background-color: #e8eaed; color: #000000; width: 72.0px; max-width: 72.0px; margin-left: 6.0px;  padding: 1.0px 5.0px 1.0px 5.0px ; ">​</span></td>
+							<span class="s13" style="background-color: #ffc8aa; color: #753800; width: 72.0px; max-width: 72.0px; margin-left: 6.0px;  padding: 1.0px 5.0px 1.0px 5.0px ; ">出租</span></td>
 						<td class="s10" dir="ltr">
-							<span class="s13" style="background-color: #e8eaed; color: #000000; width: 94.0px; max-width: 94.0px; margin-left: 6.0px;  padding: 1.0px 5.0px 1.0px 5.0px ; ">​</span></td>
+							<span class="s13" style="background-color: #e8eaed; color: #000000; width: 94.0px; max-width: 94.0px; margin-left: 6.0px;  padding: 1.0px 5.0px 1.0px 5.0px ; ">汽車-平面</span></td>
 						<td class="s16" dir="ltr">
-							&nbsp;</td>
+							B2-59號車位出租，僅供本大樓住戶租賃，有意者請洽詢管理室。</td>
 						<td class="s9" dir="ltr">
 							<svg height="16px" style="display:inline;" viewbox="0 0 16 16" width="16px"><use fill="#000000" href="#unchecked-checkbox-id"></use></svg></td>
 						<td class="s9" dir="ltr">
